--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.1",
+    "date-fns": "^4.1.0",
+    "cloudinary": "^2.9.0",
+    "lucide-react": "^0.563.0",
+    "mongoose": "^8.18.2",
     "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "next-auth": "^4.24.11",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
